--- a/plotting/s03a_ggplot_p1-exercise.Rmd
+++ b/plotting/s03a_ggplot_p1-exercise.Rmd
@@ -32,6 +32,18 @@ knitr::opts_chunk$set(fig.align = "center")
 knitr::opts_chunk$set(error = TRUE)
 ```
 
+## In Class Example
+```{r}
+ggplot(gapminder, aes(gdpPercap, lifeExp)) +
+  geom_point(alpha = .1) +
+  scale_x_log10("GDP per capita", labels = scales :: dollar_format()) +
+  theme_bw() +
+  ylab("Life Expectancy")
+```
+
+
+
+
 ## Exercise 1: Bar Chart Grammar (Together)
 
 Consider the following plot. Don't concern yourself with the code at this point.
@@ -49,13 +61,13 @@ Fill in the seven grammar components for this plot.
 
 | Grammar Component     | Specification |
 |-----------------------|---------------|
-| __data__              | `gapminder` |
-| __aesthetic mapping__ | FILL_THIS_IN |
-| __geometric object__  | FILL_THIS_IN |
-| scale                 | FILL_THIS_IN |
-| statistical transform | FILL_THIS_IN |
-| coordinate system     | FILL_THIS_IN |
-| facetting             | FILL_THIS_IN |
+| __data__              |`gapminder` |
+| __aesthetic mapping__ | x = `continent`, y = `count` |
+| __geometric object__  | bars |
+| scale                 | linear (default) |
+| statistical transform | none |
+| coordinate system     | rectangular(default) |
+| facetting             | none |
 
 ## Exercise 2: `ggplot2` Syntax (Your Turn)
 
@@ -76,7 +88,7 @@ Produce a line chart showing the concentration over time. Specifically, the plot
 |-----------------------|---------------|
 | __data__              | `mauna` |
 | __aesthetic mapping__ | x: month, y: conc |
-| __geometric object__  | lines |
+| __geometric object__  | line |
 | scale                 | linear |
 | statistical transform | none |
 | coordinate system     | rectangular |
@@ -85,8 +97,11 @@ Produce a line chart showing the concentration over time. Specifically, the plot
 Fill in the blanks to obtain the plot:
 
 ```{r, fig.width = 5, fig.height = 2}
-ggplot(FILL_THIS_IN, aes(FILL_THIS_IN, FILL_THIS_IN)) +
-  FILL_THIS_IN()
+p <- ggplot( mauna, aes(month, conc)) +
+  geom_line() +
+  xlab("Month") +
+  ylab("Concentration") +
+  theme_bw() 
 ```
 
 ### 2(b)
@@ -99,8 +114,8 @@ It turns out that you're allowed to specify the aesthetic mappings in a `geom` l
 The following code mistakenly puts the month variable on the y-axis. Fill in the `FILL_THIS_IN` so that you still obtain the same result as above.
 
 ```{r, fig.width = 5, fig.height = 2}
-ggplot(mauna, aes(y = month)) +
-  geom_line(aes(FILL_THIS_IN))
+ggplot(mauna, aes(month, conc)) +
+  geom_line(color = "red")
 ```
 
 ### 2(c)
@@ -109,7 +124,7 @@ You can store the output of the plot in a variable, too. Store the plot from 2(a
 
 ```{r, fig.width = 5, fig.height = 2}
 p +
-  FILL_THIS_IN(colour = FILL_THIS_IN)
+  geom_point(alpha = .1, color = "green")
 ```
 
 ### 2(d)
@@ -117,8 +132,11 @@ p +
 What's wrong with the following code? Fix it.
 
 ```{r, fig.width = 5, fig.height = 2}
-ggplot(gapminder) +
-  geom_point(x = gdpPercap, y = lifeExp, alpha = 0.1)
+ggplot(gapminder, aes(gdpPercap, lifeExp)) +
+  geom_point(alpha = 0.1, color = "purple") +
+  xlab("GDP per Capita") +
+  ylab("Life Expectancy")+
+  theme_bw()
 ```
 
 
@@ -132,6 +150,11 @@ So you're a ggplot2 pro? Then, let's see this plot adapted to polar coordinates.
 The plot should look like a spiral, or concentric circles. 
 
 ```{r, fig.width = 5, fig.height = 2}
-FILL_THIS_IN
+ggplot(mauna, aes(month, conc)) +
+  geom_line(color = "purple") +
+  coord_polar(theta = "x") +
+  xlab("Month") +
+  ylab("Concentration") +
+  theme_bw()
 ```
 
