--- a/wrangling/s05_data-wrangling-exercise_part-2.Rmd
+++ b/wrangling/s05_data-wrangling-exercise_part-2.Rmd
@@ -226,7 +226,8 @@ psych::bfi %>%
    participant. Store this data frame as a new object.
    
 ```{r}
-psych::bfi %>% 
+  
+  dat<- rownames_to_column(dat, var = "id")
   mutate(O_mean = mean(c(O1, O2, O3, O4, O5), na.rm = TRUE))%>% 
   mutate(C_mean = mean(c(C1, C2, C3, C4, C5), na.rm = TRUE))%>%
   mutate(E_mean = mean(c(E1, E2, E3, E4, E5), na.rm = TRUE))%>%
